update to include the records case class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-ctx.dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
-ctx.dataSource.user = jarvis
-ctx.dataSource.password = jarvis
-ctx.dataSource.databaseName = jarvis
-ctx.dataSource.portNumber = 5432
-ctx.dataSource.serverName = 127.0.0.1
-ctx.connectionTimeout = 30000
+ctx.keyspace=martian
+ctx.preparedStatementCacheSize=1000
+ctx.session.contactPoint=192.168.1.19
+ctx.session.withPort=30506
+ctx.session.queryOptions.consistencyLevel=LOCAL_QUORUM
+ctx.session.withoutMetrics=true
+ctx.session.withoutJMXReporting=false
+ctx.session.credentials.0=root
+ctx.session.credentials.1=pass
+ctx.session.maxSchemaAgreementWaitSeconds=1
+ctx.session.addressTranslator=com.datastax.driver.core.policies.IdentityTranslator
