--- a/config/oldconfig.yaml
+++ b/config/oldconfig.yaml
@@ -29,49 +29,52 @@ harmony:
 menu:
   - index: 1
     areaName:  "Family Room"
-    hass:
-      - "light.family_room_ceiling_fan_light"
-      - "light.family_room_cove_lights"
+    lutron:
+      - 6
+      - 7
+      - 8
   - index: 2
     areaName:  "Kitchen"
-    hass:
-      - "light.kitchen_main_lights"
-      - "light.kitchen_table_chandelier"
+    lutron:
+      - 4
+      - 5
   - index: 3
     areaName:  "Dining Room"
-    hass:
-      - "light.dining_room_chandelier"
+    lutron:
+      - 11
   - index: 4
     areaName:  "Living Room"
-    hass:
-      - "light.living_room_ceiling_fan_light"
+    lutron:
+      - 12
+      - 13
   - index: 5
     areaName:  "Basement"
-    hass:
-      - "light.basement_stairs_step_lights"
-      - "light.basement_stairs_main_lights"
+    lutron:
+      - 16
+      - 18
   - index: 6
     areaName:  "Playroom"
-    hass:
-      - "light.playroom_main_lights_1"
-      - "light.playroom_main_lights_2"
+    lutron:
+      - 2
+      - 3
     kasa:
       - "192.168.1.156"
   - index: 7
     areaName:  "Master Bedroom"
-    hass:
-      - "light.master_bedroom_ceiling_fan_light"
+    lutron:
+      - 14
+      - 15
     kasa:
       - "192.168.1.161"
   - index: 8
     areaName:  "Kids Bathroom"
-    hass:
-      - "light.kids_bathroom_main_lights"
+    lutron:
+      - 19
   - index: 9
     areaName:  "Office"
-    hass:
-      - "light.office_sconces"
-      - "light.office_main_lights"
+    lutron:
+      - 9
+      - 10
     kasa:
       - "192.168.1.151"
   - index: 10
@@ -82,21 +85,21 @@ menu:
             activity: "-1"
           - state: "on"
             activity: "40771265"
-    # custom:
-    #   - type: "lutron"
-    #     name: "All Lights"
-    #     devices:
-    #       - "2"
-    #       - "3"
-    #       - "4"
-    #       - "5"
-    #       - "6"
-    #       - "7"
-    #       - "9"
-    #       - "10"
-    #       - "11"
-    #       - "12"
-    #       - "14"
-    #       - "16"
-    #       - "18"
-    #       - "19"
+    custom:
+      - type: "lutron"
+        name: "All Lights"
+        devices:
+          - "2"
+          - "3"
+          - "4"
+          - "5"
+          - "6"
+          - "7"
+          - "9"
+          - "10"
+          - "11"
+          - "12"
+          - "14"
+          - "16"
+          - "18"
+          - "19"
